{
  "version": 4,
  "terraform_version": "0.14.5",
  "serial": 40,
  "lineage": "e07c2621-c88f-df7d-828f-5c907901020a",
  "resources": [
    {
      "module": "module.agent-vm",
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "test_harness_agent_nic",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/959965bb-d9df-4c6f-825e-37e1090d817d/resourceGroups/TestHarness/providers/Microsoft.Network/networkInterfaces/jwscaleavmnicdev-0",
            "internal_domain_name_suffix": "pl2ejudkxvqu3eguvxpubd1lqd.xx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "internal",
                "primary": true,
                "private_ip_address": "192.168.1.6",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/959965bb-d9df-4c6f-825e-37e1090d817d/resourceGroups/TestHarness/providers/Microsoft.Network/publicIPAddresses/jwscaleavmpipdev-0",
                "subnet_id": "/subscriptions/959965bb-d9df-4c6f-825e-37e1090d817d/resourceGroups/TestHarness/providers/Microsoft.Network/virtualNetworks/jwscalevnetdev/subnets/jwscalesubdev"
              }
            ],
            "location": "westus2",
            "name": "jwscaleavmnicdev-0",
            "private_ip_address": "192.168.1.6",
            "private_ip_addresses": [
              "192.168.1.6"
            ],
            "resource_group_name": "TestHarness"
          },
          "dependencies": [
            "azurerm_resource_group.test_harness_rg",
            "module.agent-vm.azurerm_public_ip.test_harness_agent_public_ip",
            "module.network.azurerm_subnet.test_harness_subnet",
            "module.network.azurerm_virtual_network.test_harness_vnet"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/959965bb-d9df-4c6f-825e-37e1090d817d/resourceGroups/TestHarness/providers/Microsoft.Network/networkInterfaces/jwscaleavmnicdev-1",
            "internal_domain_name_suffix": "pl2ejudkxvqu3eguvxpubd1lqd.xx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "internal",
                "primary": true,
                "private_ip_address": "192.168.1.8",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/959965bb-d9df-4c6f-825e-37e1090d817d/resourceGroups/TestHarness/providers/Microsoft.Network/publicIPAddresses/jwscaleavmpipdev-1",
                "subnet_id": "/subscriptions/959965bb-d9df-4c6f-825e-37e1090d817d/resourceGroups/TestHarness/providers/Microsoft.Network/virtualNetworks/jwscalevnetdev/subnets/jwscalesubdev"
              }
            ],
            "location": "westus2",
            "name": "jwscaleavmnicdev-1",
            "private_ip_address": "192.168.1.8",
            "private_ip_addresses": [
              "192.168.1.8"
            ],
            "resource_group_name": "TestHarness"
          },
          "dependencies": [
            "azurerm_resource_group.test_harness_rg",
            "module.agent-vm.azurerm_public_ip.test_harness_agent_public_ip",
            "module.network.azurerm_subnet.test_harness_subnet",
            "module.network.azurerm_virtual_network.test_harness_vnet"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/959965bb-d9df-4c6f-825e-37e1090d817d/resourceGroups/TestHarness/providers/Microsoft.Network/networkInterfaces/jwscaleavmnicdev-2",
            "internal_domain_name_suffix": "pl2ejudkxvqu3eguvxpubd1lqd.xx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "internal",
                "primary": true,
                "private_ip_address": "192.168.1.14",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/959965bb-d9df-4c6f-825e-37e1090d817d/resourceGroups/TestHarness/providers/Microsoft.Network/publicIPAddresses/jwscaleavmpipdev-2",
                "subnet_id": "/subscriptions/959965bb-d9df-4c6f-825e-37e1090d817d/resourceGroups/TestHarness/providers/Microsoft.Network/virtualNetworks/jwscalevnetdev/subnets/jwscalesubdev"
              }
            ],
            "location": "westus2",
            "name": "jwscaleavmnicdev-2",
            "private_ip_address": "192.168.1.14",
            "private_ip_addresses": [
              "192.168.1.14"
            ],
            "resource_group_name": "TestHarness"
          },
          "dependencies": [
            "azurerm_resource_group.test_harness_rg",
            "module.agent-vm.azurerm_public_ip.test_harness_agent_public_ip",
            "module.network.azurerm_subnet.test_harness_subnet",
            "module.network.azurerm_virtual_network.test_harness_vnet"
          ]
        },
        {
          "index_key": 3,
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/959965bb-d9df-4c6f-825e-37e1090d817d/resourceGroups/TestHarness/providers/Microsoft.Network/networkInterfaces/jwscaleavmnicdev-3",
            "internal_domain_name_suffix": "pl2ejudkxvqu3eguvxpubd1lqd.xx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "internal",
                "primary": true,
                "private_ip_address": "192.168.1.10",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/959965bb-d9df-4c6f-825e-37e1090d817d/resourceGroups/TestHarness/providers/Microsoft.Network/publicIPAddresses/jwscaleavmpipdev-3",
                "subnet_id": "/subscriptions/959965bb-d9df-4c6f-825e-37e1090d817d/resourceGroups/TestHarness/providers/Microsoft.Network/virtualNetworks/jwscalevnetdev/subnets/jwscalesubdev"
              }
            ],
            "location": "westus2",
            "name": "jwscaleavmnicdev-3",
            "private_ip_address": "192.168.1.10",
            "private_ip_addresses": [
              "192.168.1.10"
            ],
            "resource_group_name": "TestHarness"
          },
          "dependencies": [
            "azurerm_resource_group.test_harness_rg",
            "module.agent-vm.azurerm_public_ip.test_harness_agent_public_ip",
            "module.network.azurerm_subnet.test_harness_subnet",
            "module.network.azurerm_virtual_network.test_harness_vnet"
          ]
        },
        {
          "index_key": 4,
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/959965bb-d9df-4c6f-825e-37e1090d817d/resourceGroups/TestHarness/providers/Microsoft.Network/networkInterfaces/jwscaleavmnicdev-4",
            "internal_domain_name_suffix": "pl2ejudkxvqu3eguvxpubd1lqd.xx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "internal",
                "primary": true,
                "private_ip_address": "192.168.1.13",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/959965bb-d9df-4c6f-825e-37e1090d817d/resourceGroups/TestHarness/providers/Microsoft.Network/publicIPAddresses/jwscaleavmpipdev-4",
                "subnet_id": "/subscriptions/959965bb-d9df-4c6f-825e-37e1090d817d/resourceGroups/TestHarness/providers/Microsoft.Network/virtualNetworks/jwscalevnetdev/subnets/jwscalesubdev"
              }
            ],
            "location": "westus2",
            "name": "jwscaleavmnicdev-4",
            "private_ip_address": "192.168.1.13",
            "private_ip_addresses": [
              "192.168.1.13"
            ],
            "resource_group_name": "TestHarness"
          },
          "dependencies": [
            "azurerm_resource_group.test_harness_rg",
            "module.agent-vm.azurerm_public_ip.test_harness_agent_public_ip",
            "module.network.azurerm_subnet.test_harness_subnet",
            "module.network.azurerm_virtual_network.test_harness_vnet"
          ]
        },
        {
          "index_key": 5,
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/959965bb-d9df-4c6f-825e-37e1090d817d/resourceGroups/TestHarness/providers/Microsoft.Network/networkInterfaces/jwscaleavmnicdev-5",
            "internal_domain_name_suffix": "pl2ejudkxvqu3eguvxpubd1lqd.xx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "internal",
                "primary": true,
                "private_ip_address": "192.168.1.11",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/959965bb-d9df-4c6f-825e-37e1090d817d/resourceGroups/TestHarness/providers/Microsoft.Network/publicIPAddresses/jwscaleavmpipdev-5",
                "subnet_id": "/subscriptions/959965bb-d9df-4c6f-825e-37e1090d817d/resourceGroups/TestHarness/providers/Microsoft.Network/virtualNetworks/jwscalevnetdev/subnets/jwscalesubdev"
              }
            ],
            "location": "westus2",
            "name": "jwscaleavmnicdev-5",
            "private_ip_address": "192.168.1.11",
            "private_ip_addresses": [
              "192.168.1.11"
            ],
            "resource_group_name": "TestHarness"
          },
          "dependencies": [
            "azurerm_resource_group.test_harness_rg",
            "module.agent-vm.azurerm_public_ip.test_harness_agent_public_ip",
            "module.network.azurerm_subnet.test_harness_subnet",
            "module.network.azurerm_virtual_network.test_harness_vnet"
          ]
        },
        {
          "index_key": 6,
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/959965bb-d9df-4c6f-825e-37e1090d817d/resourceGroups/TestHarness/providers/Microsoft.Network/networkInterfaces/jwscaleavmnicdev-6",
            "internal_domain_name_suffix": "pl2ejudkxvqu3eguvxpubd1lqd.xx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "internal",
                "primary": true,
                "private_ip_address": "192.168.1.12",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/959965bb-d9df-4c6f-825e-37e1090d817d/resourceGroups/TestHarness/providers/Microsoft.Network/publicIPAddresses/jwscaleavmpipdev-6",
                "subnet_id": "/subscriptions/959965bb-d9df-4c6f-825e-37e1090d817d/resourceGroups/TestHarness/providers/Microsoft.Network/virtualNetworks/jwscalevnetdev/subnets/jwscalesubdev"
              }
            ],
            "location": "westus2",
            "name": "jwscaleavmnicdev-6",
            "private_ip_address": "192.168.1.12",
            "private_ip_addresses": [
              "192.168.1.12"
            ],
            "resource_group_name": "TestHarness"
          },
          "dependencies": [
            "azurerm_resource_group.test_harness_rg",
            "module.agent-vm.azurerm_public_ip.test_harness_agent_public_ip",
            "module.network.azurerm_subnet.test_harness_subnet",
            "module.network.azurerm_virtual_network.test_harness_vnet"
          ]
        },
        {
          "index_key": 7,
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/959965bb-d9df-4c6f-825e-37e1090d817d/resourceGroups/TestHarness/providers/Microsoft.Network/networkInterfaces/jwscaleavmnicdev-7",
            "internal_domain_name_suffix": "pl2ejudkxvqu3eguvxpubd1lqd.xx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "internal",
                "primary": true,
                "private_ip_address": "192.168.1.7",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/959965bb-d9df-4c6f-825e-37e1090d817d/resourceGroups/TestHarness/providers/Microsoft.Network/publicIPAddresses/jwscaleavmpipdev-7",
                "subnet_id": "/subscriptions/959965bb-d9df-4c6f-825e-37e1090d817d/resourceGroups/TestHarness/providers/Microsoft.Network/virtualNetworks/jwscalevnetdev/subnets/jwscalesubdev"
              }
            ],
            "location": "westus2",
            "name": "jwscaleavmnicdev-7",
            "private_ip_address": "192.168.1.7",
            "private_ip_addresses": [
              "192.168.1.7"
            ],
            "resource_group_name": "TestHarness"
          },
          "dependencies": [
            "azurerm_resource_group.test_harness_rg",
            "module.agent-vm.azurerm_public_ip.test_harness_agent_public_ip",
            "module.network.azurerm_subnet.test_harness_subnet",
            "module.network.azurerm_virtual_network.test_harness_vnet"
          ]
        },
        {
          "index_key": 8,
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/959965bb-d9df-4c6f-825e-37e1090d817d/resourceGroups/TestHarness/providers/Microsoft.Network/networkInterfaces/jwscaleavmnicdev-8",
            "internal_domain_name_suffix": "pl2ejudkxvqu3eguvxpubd1lqd.xx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "internal",
                "primary": true,
                "private_ip_address": "192.168.1.9",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/959965bb-d9df-4c6f-825e-37e1090d817d/resourceGroups/TestHarness/providers/Microsoft.Network/publicIPAddresses/jwscaleavmpipdev-8",
                "subnet_id": "/subscriptions/959965bb-d9df-4c6f-825e-37e1090d817d/resourceGroups/TestHarness/providers/Microsoft.Network/virtualNetworks/jwscalevnetdev/subnets/jwscalesubdev"
              }
            ],
            "location": "westus2",
            "name": "jwscaleavmnicdev-8",
            "private_ip_address": "192.168.1.9",
            "private_ip_addresses": [
              "192.168.1.9"
            ],
            "resource_group_name": "TestHarness"
          },
          "dependencies": [
            "azurerm_resource_group.test_harness_rg",
            "module.agent-vm.azurerm_public_ip.test_harness_agent_public_ip",
            "module.network.azurerm_subnet.test_harness_subnet",
            "module.network.azurerm_virtual_network.test_harness_vnet"
          ]
        },
        {
          "index_key": 9,
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/959965bb-d9df-4c6f-825e-37e1090d817d/resourceGroups/TestHarness/providers/Microsoft.Network/networkInterfaces/jwscaleavmnicdev-9",
            "internal_domain_name_suffix": "pl2ejudkxvqu3eguvxpubd1lqd.xx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "internal",
                "primary": true,
                "private_ip_address": "192.168.1.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/959965bb-d9df-4c6f-825e-37e1090d817d/resourceGroups/TestHarness/providers/Microsoft.Network/publicIPAddresses/jwscaleavmpipdev-9",
                "subnet_id": "/subscriptions/959965bb-d9df-4c6f-825e-37e1090d817d/resourceGroups/TestHarness/providers/Microsoft.Network/virtualNetworks/jwscalevnetdev/subnets/jwscalesubdev"
              }
            ],
            "location": "westus2",
            "name": "jwscaleavmnicdev-9",
            "private_ip_address": "192.168.1.4",
            "private_ip_addresses": [
              "192.168.1.4"
            ],
            "resource_group_name": "TestHarness"
          },
          "dependencies": [
            "azurerm_resource_group.test_harness_rg",
            "module.agent-vm.azurerm_public_ip.test_harness_agent_public_ip",
            "module.network.azurerm_subnet.test_harness_subnet",
            "module.network.azurerm_virtual_network.test_harness_vnet"
          ]
        }
      ]
    },
    {
      "module": "module.agent-vm",
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "test_harness_agent_public_ip",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "domain_name_label": "jwscaleavmdev-0",
            "fqdn": "jwscaleavmdev-0.westus2.cloudapp.azure.com",
            "id": "/subscriptions/959965bb-d9df-4c6f-825e-37e1090d817d/resourceGroups/TestHarness/providers/Microsoft.Network/publicIPAddresses/jwscaleavmpipdev-0",
            "idle_timeout_in_minutes": 4,
            "ip_address": "52.183.25.195",
            "ip_version": "IPv4",
            "location": "westus2",
            "name": "jwscaleavmpipdev-0",
            "resource_group_name": "TestHarness",
            "sku": "Basic"
          },
          "dependencies": [
            "azurerm_resource_group.test_harness_rg"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "domain_name_label": "jwscaleavmdev-1",
            "fqdn": "jwscaleavmdev-1.westus2.cloudapp.azure.com",
            "id": "/subscriptions/959965bb-d9df-4c6f-825e-37e1090d817d/resourceGroups/TestHarness/providers/Microsoft.Network/publicIPAddresses/jwscaleavmpipdev-1",
            "idle_timeout_in_minutes": 4,
            "ip_address": "52.183.24.129",
            "ip_version": "IPv4",
            "location": "westus2",
            "name": "jwscaleavmpipdev-1",
            "resource_group_name": "TestHarness",
            "sku": "Basic"
          },
          "dependencies": [
            "azurerm_resource_group.test_harness_rg"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "domain_name_label": "jwscaleavmdev-2",
            "fqdn": "jwscaleavmdev-2.westus2.cloudapp.azure.com",
            "id": "/subscriptions/959965bb-d9df-4c6f-825e-37e1090d817d/resourceGroups/TestHarness/providers/Microsoft.Network/publicIPAddresses/jwscaleavmpipdev-2",
            "idle_timeout_in_minutes": 4,
            "ip_address": "13.66.164.206",
            "ip_version": "IPv4",
            "location": "westus2",
            "name": "jwscaleavmpipdev-2",
            "resource_group_name": "TestHarness",
            "sku": "Basic"
          },
          "dependencies": [
            "azurerm_resource_group.test_harness_rg"
          ]
        },
        {
          "index_key": 3,
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "domain_name_label": "jwscaleavmdev-3",
            "fqdn": "jwscaleavmdev-3.westus2.cloudapp.azure.com",
            "id": "/subscriptions/959965bb-d9df-4c6f-825e-37e1090d817d/resourceGroups/TestHarness/providers/Microsoft.Network/publicIPAddresses/jwscaleavmpipdev-3",
            "idle_timeout_in_minutes": 4,
            "ip_address": "52.183.34.140",
            "ip_version": "IPv4",
            "location": "westus2",
            "name": "jwscaleavmpipdev-3",
            "resource_group_name": "TestHarness",
            "sku": "Basic"
          },
          "dependencies": [
            "azurerm_resource_group.test_harness_rg"
          ]
        },
        {
          "index_key": 4,
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "domain_name_label": "jwscaleavmdev-4",
            "fqdn": "jwscaleavmdev-4.westus2.cloudapp.azure.com",
            "id": "/subscriptions/959965bb-d9df-4c6f-825e-37e1090d817d/resourceGroups/TestHarness/providers/Microsoft.Network/publicIPAddresses/jwscaleavmpipdev-4",
            "idle_timeout_in_minutes": 4,
            "ip_address": "13.66.159.173",
            "ip_version": "IPv4",
            "location": "westus2",
            "name": "jwscaleavmpipdev-4",
            "resource_group_name": "TestHarness",
            "sku": "Basic"
          },
          "dependencies": [
            "azurerm_resource_group.test_harness_rg"
          ]
        },
        {
          "index_key": 5,
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "domain_name_label": "jwscaleavmdev-5",
            "fqdn": "jwscaleavmdev-5.westus2.cloudapp.azure.com",
            "id": "/subscriptions/959965bb-d9df-4c6f-825e-37e1090d817d/resourceGroups/TestHarness/providers/Microsoft.Network/publicIPAddresses/jwscaleavmpipdev-5",
            "idle_timeout_in_minutes": 4,
            "ip_address": "52.183.37.213",
            "ip_version": "IPv4",
            "location": "westus2",
            "name": "jwscaleavmpipdev-5",
            "resource_group_name": "TestHarness",
            "sku": "Basic"
          },
          "dependencies": [
            "azurerm_resource_group.test_harness_rg"
          ]
        },
        {
          "index_key": 6,
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "domain_name_label": "jwscaleavmdev-6",
            "fqdn": "jwscaleavmdev-6.westus2.cloudapp.azure.com",
            "id": "/subscriptions/959965bb-d9df-4c6f-825e-37e1090d817d/resourceGroups/TestHarness/providers/Microsoft.Network/publicIPAddresses/jwscaleavmpipdev-6",
            "idle_timeout_in_minutes": 4,
            "ip_address": "52.183.0.105",
            "ip_version": "IPv4",
            "location": "westus2",
            "name": "jwscaleavmpipdev-6",
            "resource_group_name": "TestHarness",
            "sku": "Basic"
          },
          "dependencies": [
            "azurerm_resource_group.test_harness_rg"
          ]
        },
        {
          "index_key": 7,
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "domain_name_label": "jwscaleavmdev-7",
            "fqdn": "jwscaleavmdev-7.westus2.cloudapp.azure.com",
            "id": "/subscriptions/959965bb-d9df-4c6f-825e-37e1090d817d/resourceGroups/TestHarness/providers/Microsoft.Network/publicIPAddresses/jwscaleavmpipdev-7",
            "idle_timeout_in_minutes": 4,
            "ip_address": "52.183.35.241",
            "ip_version": "IPv4",
            "location": "westus2",
            "name": "jwscaleavmpipdev-7",
            "resource_group_name": "TestHarness",
            "sku": "Basic"
          },
          "dependencies": [
            "azurerm_resource_group.test_harness_rg"
          ]
        },
        {
          "index_key": 8,
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "domain_name_label": "jwscaleavmdev-8",
            "fqdn": "jwscaleavmdev-8.westus2.cloudapp.azure.com",
            "id": "/subscriptions/959965bb-d9df-4c6f-825e-37e1090d817d/resourceGroups/TestHarness/providers/Microsoft.Network/publicIPAddresses/jwscaleavmpipdev-8",
            "idle_timeout_in_minutes": 4,
            "ip_address": "52.183.33.194",
            "ip_version": "IPv4",
            "location": "westus2",
            "name": "jwscaleavmpipdev-8",
            "resource_group_name": "TestHarness",
            "sku": "Basic"
          },
          "dependencies": [
            "azurerm_resource_group.test_harness_rg"
          ]
        },
        {
          "index_key": 9,
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "domain_name_label": "jwscaleavmdev-9",
            "fqdn": "jwscaleavmdev-9.westus2.cloudapp.azure.com",
            "id": "/subscriptions/959965bb-d9df-4c6f-825e-37e1090d817d/resourceGroups/TestHarness/providers/Microsoft.Network/publicIPAddresses/jwscaleavmpipdev-9",
            "idle_timeout_in_minutes": 4,
            "ip_address": "52.183.24.69",
            "ip_version": "IPv4",
            "location": "westus2",
            "name": "jwscaleavmpipdev-9",
            "resource_group_name": "TestHarness",
            "sku": "Basic"
          },
          "dependencies": [
            "azurerm_resource_group.test_harness_rg"
          ]
        }
      ]
    },
    {
      "module": "module.main-vm",
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "test_harness_main_nic",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/959965bb-d9df-4c6f-825e-37e1090d817d/resourceGroups/TestHarness/providers/Microsoft.Network/networkInterfaces/jwscalemvmnicdev",
            "internal_domain_name_suffix": "pl2ejudkxvqu3eguvxpubd1lqd.xx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "internal",
                "primary": true,
                "private_ip_address": "192.168.1.5",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/959965bb-d9df-4c6f-825e-37e1090d817d/resourceGroups/TestHarness/providers/Microsoft.Network/publicIPAddresses/jwscalemvmpipdev",
                "subnet_id": "/subscriptions/959965bb-d9df-4c6f-825e-37e1090d817d/resourceGroups/TestHarness/providers/Microsoft.Network/virtualNetworks/jwscalevnetdev/subnets/jwscalesubdev"
              }
            ],
            "location": "westus2",
            "name": "jwscalemvmnicdev",
            "private_ip_address": "192.168.1.5",
            "private_ip_addresses": [
              "192.168.1.5"
            ],
            "resource_group_name": "TestHarness"
          },
          "dependencies": [
            "azurerm_resource_group.test_harness_rg",
            "module.main-vm.azurerm_public_ip.test_harness_main_public_ip",
            "module.network.azurerm_subnet.test_harness_subnet",
            "module.network.azurerm_virtual_network.test_harness_vnet"
          ]
        }
      ]
    },
    {
      "module": "module.main-vm",
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "test_harness_main_public_ip",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "domain_name_label": "jwscalemvmdev",
            "fqdn": "jwscalemvmdev.westus2.cloudapp.azure.com",
            "id": "/subscriptions/959965bb-d9df-4c6f-825e-37e1090d817d/resourceGroups/TestHarness/providers/Microsoft.Network/publicIPAddresses/jwscalemvmpipdev",
            "idle_timeout_in_minutes": 4,
            "ip_address": "52.183.32.165",
            "ip_version": "IPv4",
            "location": "westus2",
            "name": "jwscalemvmpipdev",
            "resource_group_name": "TestHarness",
            "sku": "Basic"
          },
          "dependencies": [
            "azurerm_resource_group.test_harness_rg"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "test_harness_nsg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/959965bb-d9df-4c6f-825e-37e1090d817d/resourceGroups/TestHarness/providers/Microsoft.Network/networkSecurityGroups/jwscalensgdev",
            "location": "westus2",
            "name": "jwscalensgdev",
            "resource_group_name": "TestHarness",
            "security_rule": [],
            "tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.test_harness_rg",
            "module.network.azurerm_virtual_network.test_harness_vnet"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "test_harness_nsg_rule_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": null,
            "destination_application_security_group_ids": null,
            "destination_port_range": "22",
            "destination_port_ranges": null,
            "direction": "Inbound",
            "id": "/subscriptions/959965bb-d9df-4c6f-825e-37e1090d817d/resourceGroups/TestHarness/providers/Microsoft.Network/networkSecurityGroups/jwscalensgdev/securityRules/ssh",
            "name": "ssh",
            "network_security_group_name": "jwscalensgdev",
            "priority": 1000,
            "protocol": "Tcp",
            "resource_group_name": "TestHarness",
            "source_address_prefix": "*",
            "source_address_prefixes": null,
            "source_application_security_group_ids": null,
            "source_port_range": "22",
            "source_port_ranges": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.test_harness_rg",
            "module.network.azurerm_network_security_group.test_harness_nsg",
            "module.network.azurerm_virtual_network.test_harness_vnet"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "test_harness_nsg_rule_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": null,
            "destination_application_security_group_ids": null,
            "destination_port_range": "8089",
            "destination_port_ranges": null,
            "direction": "Inbound",
            "id": "/subscriptions/959965bb-d9df-4c6f-825e-37e1090d817d/resourceGroups/TestHarness/providers/Microsoft.Network/networkSecurityGroups/jwscalensgdev/securityRules/http",
            "name": "http",
            "network_security_group_name": "jwscalensgdev",
            "priority": 1005,
            "protocol": "Tcp",
            "resource_group_name": "TestHarness",
            "source_address_prefix": "*",
            "source_address_prefixes": null,
            "source_application_security_group_ids": null,
            "source_port_range": "8089",
            "source_port_ranges": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.test_harness_rg",
            "module.network.azurerm_network_security_group.test_harness_nsg",
            "module.network.azurerm_virtual_network.test_harness_vnet"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "test_harness_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefix": "192.168.1.0/24",
            "address_prefixes": [
              "192.168.1.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/959965bb-d9df-4c6f-825e-37e1090d817d/resourceGroups/TestHarness/providers/Microsoft.Network/virtualNetworks/jwscalevnetdev/subnets/jwscalesubdev",
            "name": "jwscalesubdev",
            "resource_group_name": "TestHarness",
            "virtual_network_name": "jwscalevnetdev"
          },
          "dependencies": [
            "azurerm_resource_group.test_harness_rg",
            "module.network.azurerm_virtual_network.test_harness_vnet"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "test_harness_vnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "192.168.0.0/16"
            ],
            "guid": "d044f87a-bd6a-4e61-90d4-addf408f6b83",
            "id": "/subscriptions/959965bb-d9df-4c6f-825e-37e1090d817d/resourceGroups/TestHarness/providers/Microsoft.Network/virtualNetworks/jwscalevnetdev",
            "location": "westus2",
            "name": "jwscalevnetdev",
            "resource_group_name": "TestHarness",
            "vm_protection_enabled": false
          },
          "dependencies": [
            "azurerm_resource_group.test_harness_rg"
          ]
        }
      ]
    }
  ]
}